--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+    font-family: 'vazir';
+    src: url('./utilities/fonts/vazir-font-v16.1.0/Vazir-Medium.eot') format('eot');
+    src: url('./utilities/fonts/vazir-font-v16.1.0/Vazir-Medium.ttf') format('ttf');
+    src: url('./utilities/fonts/vazir-font-v16.1.0/Vazir-Medium.woff') format('woff');
+    src: url('./utilities/fonts/vazir-font-v16.1.0/Vazir-Medium.woff2') format('woff2');
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+    font-family: 'vazir';
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
