--- a/src/pages/SignIn.css
+++ b/src/pages/SignIn.css
@@ -1,19 +1,19 @@
-.SignInPage {
+/* .SignInPage {
   width: 100vw;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-}
+} */
 
-#light {
+/* #light {
   background-color: #f3ebf6;
 }
 
 #dark {
   background-color: #46045e;
-}
+} */
 
 body {
   margin: 0;
@@ -32,13 +32,13 @@ body .main {
   box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
 }
 
-#light .main {
+/* #light .main {
   background-color: #fff;
 }
 
 #dark .main {
   background-color: #38004c;
-}
+} */
 
 .sign {
   padding-top: 40px;
@@ -46,16 +46,16 @@ body .main {
   font-size: 23px;
 }
 
-#light .sign {
+/* #light .sign {
   color: #8c55aa;
 }
 
 #dark .sign {
   color: #ffffff;
-}
+} */
 
 .username {
-  width: 76%;
+  width: 100%;
   font-weight: 700;
   font-size: 14px;
   letter-spacing: 1px;
@@ -71,7 +71,7 @@ body .main {
 }
 
 .email{
-  width: 76%;
+  width: 100%;
   font-weight: 700;
   font-size: 14px;
   letter-spacing: 1px;
@@ -96,7 +96,7 @@ form.form1 {
 }
 
 .password {
-  width: 76%;
+  width: 100%;
   font-weight: 700;
   font-size: 14px;
   letter-spacing: 1px;
@@ -111,7 +111,7 @@ form.form1 {
   margin-bottom: 27px;
 }
 
-#light .username,
+/* #light .username,
 #light .password,
 #light .email {
   color: rgb(38, 50, 56);
@@ -123,14 +123,14 @@ form.form1 {
 #dark .email {
   color: rgb(254, 255, 255);
   background: rgba(255, 247, 247, 0.299);
-}
+} */
 
 .username:focus,
 .password:focus {
   border: 2px solid rgba(0, 0, 0, 0.18) !important;
 }
 
-.submit {
+/* .submit {
   cursor: pointer;
   border-radius: 5em;
   color: #fff;
@@ -143,7 +143,7 @@ form.form1 {
   font-family: "Ubuntu", sans-serif;
   font-size: 13px;
   box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
-}
+} */
 
 .forgot {
   text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
