--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,16 @@
 .AppContainer{
     width: 100%;
-  height: 100%;
-  margin-top: 10%;
+  height: auto;
+  padding: 10%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+#lightMode.AppContainer{
+  background-color: #fff;
+}
+#darkMode.AppContainer{
+  background-color: #ccc;
 }
