--- a/src/components/signBox/LoginForm.css
+++ b/src/components/signBox/LoginForm.css
@@ -4,6 +4,7 @@
   font-weight: 500;
   text-decoration: none;
 }
+
 .FormBoxContainer {
   width: 100%;
   display: flex;
@@ -16,6 +17,7 @@
   display: flex;
   flex-direction: column;
   box-shadow: 0px 0px 2.5px rgba(15, 15, 15, 0.19);
+  border-radius: 30%;
 }
 .Input {
   width: 100%;
@@ -28,17 +30,14 @@
   font-size: 12px;
 }
 .Input::placeholder {
-  color: rgba(200, 200, 200, 1);
+  color: rgba(200, 200, 200, 0.4);
 }
 
-.Input:not(:last-of-type) {
+ .Input:not(:last-of-type) {
   border-bottom: 1.5px solid rgba(200, 200, 200, 0.4);
 }
 
-.Input:focus {
-  outline: none;
-  border-bottom: 2px solid rgb(155, 89, 182);
-}
+
 .MutedLink {
   font-size: 12px;
   color: rgba(200, 200, 200, 0.8);
@@ -46,9 +45,12 @@
   text-align: center;
   text-decoration: none;
 }
+
+
 .MutedLink:hover {
   color: rgba(200, 200, 200, 0.8);
 }
+
 .SubmitButton {
   width: 100%;
   padding: 11px 10%;
@@ -61,13 +63,8 @@
   border-radius: 100px 100px 100px 100px;
   cursor: pointer;
   transition: all, 240ms ease-in-out;
-  background: rgb(155, 89, 182);
-  background: linear-gradient(
-    54deg,
-    rgba(155, 89, 182, 1) 12%,
-    rgba(126, 20, 218, 1) 94%
-  );
 }
+
 .SubmitButton:hover {
   filter: brightness(1.2);
 }
