--- a/src/components/signBox/SignBox.css
+++ b/src/components/signBox/SignBox.css
@@ -4,11 +4,12 @@
     display: flex;
     flex-direction: column;
     border-radius: 20px;
-    background-color: #fff;
     box-shadow: 0 0 2px rgba(15, 15, 15, 0.28);
     position: relative;
     overflow: hidden;
 }
+
+
 
 .TopContainer{
     width: 100%;
@@ -18,6 +19,7 @@
     justify-content: flex-end;
     padding: 0 1.8em;
     padding-bottom: 5em;
+    background-color: transparent;
 }
 
 .BackDrop{
@@ -30,13 +32,9 @@
     transform: rotate(-60deg);
     top: -300px;
     left: -70px;
-    background: rgb(155, 89, 182);
-    background: linear-gradient(
-      54deg,
-      rgba(155, 89, 182, 1) 12%,
-      rgba(126, 20, 218, 1) 94%
-    );
+    
 }
+
 
 .HeaderContainer{
     width: 100%;
@@ -59,6 +57,7 @@
   margin-top: 5px;
 }
 .InnerContainer{
+    background-color: transparent;
     width: 100%;
     display: flex;
     flex-direction: column;
