--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .AppContainer{
     width: 100%;
-  height: auto;
-  padding: 10%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
