--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,17 @@
-.AppContainer{
+*{
+  box-sizing: border-box;
+}
+
+:root{
+  --color-1: #242526;
+  --color-2: white;
+  --color-3: #0084ff;
+  --color-4: grey;
+  --color-5: #eb4034;
+  --color-6: #333333;
+}
+
+.register-page{
     width: 100%;
   height: 100vh;
   display: flex;
@@ -9,7 +22,9 @@
 
 #lightMode.AppContainer{
   background-color: #fff;
+  color: balck;
 }
 #darkMode.AppContainer{
-  background-color: #ccc;
+  background-color: rgb(99, 98, 98);
+  color: white;
 }
