--- a/src/components/signBox/SignUp.css
+++ b/src/components/signBox/SignUp.css
@@ -10,12 +10,14 @@
     flex-direction: column;
     align-items: center;
     margin-top: 10px;
+    border-bottom: none;
   }
   .FormContainer {
     width: 100%;
     display: flex;
     flex-direction: column;
-    box-shadow: 0px 0px 2.5px rgba(15, 15, 15, 0.19);
+    box-shadow:none;
+    border-bottom: none;
   }
   .Input {
     width: 100%;
@@ -70,5 +72,9 @@
   }
   .SubmitButton:hover {
     filter: brightness(1.2);
+  }
+  .error{
+    text-align: center;
+    color: var(--color-5);
   }
   
