--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-*{
+* {
   box-sizing: border-box;
 }
 
-:root{
+:root {
   --color-1: #242526;
   --color-2: white;
   --color-3: #0084ff;
@@ -11,8 +11,22 @@
   --color-6: #333333;
 }
 
-.register-page{
-    width: 100%;
+section {
+  max-width: 500px;
+  margin: 0 auto;
+  margin-top: 100px;
+  box-shadow: 1px 2px 10px var(--color-4);
+  padding: 10px 20px;
+  border-radius: 5px;
+}
+section h3 {
+  text-align: center;
+  font-size: 20px;
+  color: var(--color-4);
+}
+
+.register-page {
+  width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -20,11 +34,57 @@
   justify-content: center;
 }
 
-#lightMode.AppContainer{
+#lightMode.AppContainer {
   background-color: #fff;
   color: balck;
 }
-#darkMode.AppContainer{
+#darkMode.AppContainer {
   background-color: rgb(99, 98, 98);
   color: white;
+}
+
+/* Profile */
+
+.profile-container {
+  display: flex;
+  align-items: center;
+}
+
+.img-container {
+  position: relative;
+  margin-left: 20px;
+}
+
+.img-container img{
+  width: 100%;
+  height: 100px;
+  border-radius:50%;
+  border: 1px solid var(--color-4);
+  transition: 0.5s ease-in-out all; 
+}
+
+.img-container:hover img{
+  opacity: 0.4;
+}
+
+.img-container:hover .overlay{
+  opacity: 1;
+}
+
+.overlay{
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.text-container {
+  flex-grow:1;
+}
+
+.text-container h3{
+  text-align: right;
 }
