--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
 }
 
+
 :root {
   --color-1: #242526;
   --color-2: white;
@@ -122,6 +123,29 @@ section h3 {
   color: var(--color-4);
   text-align: center;
   margin-top: 20px;
+}
+
+.message-form{
+  position:absolute;
+  bottom: 10px;
+  left: 20%;
+  width: 100%;
+  height: 30px;
+  display: flex;
+  align-items: center;
+}
+
+.message-form input{
+  width: 40vw;
+  margin: 0px 10px;
+  padding: 10px;
+  border-radius: 5px;
+  outline:none;
+  border:none;
+}
+
+.message-form .btn{
+  margin-top: -10px;
 }
 
 /* Profile */
