--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ section h3 {
 .home-container {
   position: relative;
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1.3fr 3fr;
   overflow: hidden;
   height: calc(100vh - 70px);
   width: 100vh;
@@ -128,7 +128,7 @@ section h3 {
 .message-form{
   position:absolute;
   bottom: 10px;
-  left: 20%;
+  right: 20%;
   width: 100%;
   height: 30px;
   display: flex;
@@ -145,7 +145,7 @@ section h3 {
 }
 
 .message-form .btn{
-  margin-top: -10px;
+  margin-left: 50px;
 }
 
 /* Profile */
