--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,31 @@
   box-sizing: border-box;
 }
 
-
 :root {
   --color-1: #242526;
   --color-2: white;
   --color-3: #0084ff;
   --color-4: grey;
   --color-5: #eb4034;
-  --color-6: #333333;
+  --color-6: #333;
+}
+
+/* Navbar */
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 70px;
+  padding: 0px 20px;
+  background-color: var(--color-1);
+  border-bottom: 1px solid var(--color-6);
+}
+nav a {
+  color: var(--color-2);
+  text-decoration: none;
+}
+nav div a {
+  margin-right: 20px;
 }
 
 section {
@@ -25,157 +42,74 @@ section h3 {
   font-size: 20px;
   color: var(--color-4);
 }
-
-.register-page {
-  width: 100%;
-  height: 100vh;
+/* Register */
+.register-page{
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 25px;
 }
-
-#lightMode.AppContainer {
-  background-color: #fff;
-  color: balck;
+section .form {
+  margin-top: 30px;
+  padding: 0px 20px;
 }
-#darkMode.AppContainer {
-  background-color: rgb(99, 98, 98);
-  color: white;
-}
-
-/* Home */
-
-.home-container {
-  position: relative;
-  display: grid;
-  grid-template-columns: 1.3fr 3fr;
-  overflow: hidden;
-  height: calc(100vh - 70px);
-  width: 100vh;
-}
-
-/* User */
-
-.users-container {
-  margin-top: 10px;
-  border-right: 2px solid var(--color-6);
-  overflow-y: auto;
-}
-
-.user-wrapper {
-  margin-bottom: 10px;
-  padding: 10px;
-  cursor: pointer;
-}
-
-.user-info {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.user-detail {
-  display: flex;
-  align-items: center;
-}
-
-.user-detail h4 {
-  margin-right: 10px;
-}
-
-.avatar {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  border: 1px solid var(--color-4);
-}
-
-.user-status {
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-}
-
-.online {
-  background: #34eb52;
-}
-
-.offline {
-  background: var(--color-5);
-}
-
-/* Messages */
-
-.messages-container {
-  position: relative;
-  width: 100%;
-}
-
-.messages-user {
-  padding: 10px;
-  text-align: center;
-  border-bottom: 2px solid var(--color-6);
-}
-
-.no-conv {
-  font-size: 20px;
-  color: var(--color-4);
-  text-align: center;
+.input-container {
   margin-top: 20px;
 }
-
-.message-form{
-  position:absolute;
-  bottom: 10px;
-  right: 20%;
+.input-container input {
   width: 100%;
-  height: 30px;
-  display: flex;
-  align-items: center;
+  padding: 10px;
+  outline: none;
+  margin-top: 10px;
+  border: 1px solid var(--color-6);
+  border-radius: 5px;
 }
-
-.message-form input{
-  width: 40vw;
-  margin: 0px 10px;
+.btn-container {
+  margin: 10px 0px;
+  text-align: center;
+}
+.btn {
   padding: 10px;
   border-radius: 5px;
-  outline:none;
-  border:none;
+  outline: none;
+  border: 1px solid var(--color-4);
+  background: var(--color-1);
+  color: var(--color-2);
+  cursor: pointer;
+  transition: 0.3s ease-in-out all;
+  font-size: 16px;
 }
-
-.message-form .btn{
-  margin-left: 50px;
+.btn:hover {
+  transform: scale(1.05);
+  color: var(--color-2);
+}
+.error {
+  text-align: center;
+  color: var(--color-5);
 }
 
 /* Profile */
-
 .profile-container {
   display: flex;
   align-items: center;
 }
-
 .img-container {
   position: relative;
-  margin-left: 20px;
+  margin-right: 20px;
 }
-
 .img-container img {
-  width: 100%;
+  width: 100px;
   height: 100px;
   border-radius: 50%;
   border: 1px solid var(--color-4);
   transition: 0.5s ease-in-out all;
 }
-
 .img-container:hover img {
   opacity: 0.4;
 }
-
 .img-container:hover .overlay {
   opacity: 1;
 }
-
 .overlay {
   transition: 0.5s ease;
   opacity: 0;
@@ -185,11 +119,190 @@ section h3 {
   transform: translate(-50%, -50%);
   text-align: center;
 }
-
 .text-container {
   flex-grow: 1;
 }
-
 .text-container h3 {
+  text-align: left;
+}
+
+.home-container {
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  overflow: hidden;
+  height: calc(100vh - 70px);
+  width: 100vw;
+}
+.users-container {
+  margin-top: 10px;
+  border-right: 2px solid var(--color-6);
+  overflow-y: auto;
+}
+.user-wrapper {
+  margin-bottom: 10px;
+  padding: 10px;
+  cursor: pointer;
+}
+.user-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.user-detail {
+  display: flex;
+  align-items: center;
+}
+.user-detail h4 {
+  margin-left: 10px;
+}
+.avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 1px solid var(--color-4);
+}
+.user-status {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+}
+.online {
+  background: #34eb52;
+}
+.offline {
+  background: var(--color-5);
+}
+.messages-container {
+  position: relative;
+  width: 100%;
+}
+.messages-user {
+  padding: 10px;
+  text-align: center;
+  border-bottom: 2px solid var(--color-6);
+}
+.no-conv {
+  font-size: 20px;
+  color: var(--color-4);
+  text-align: center;
+}
+.message-form {
+  position: absolute;
+  bottom: 20px;
+  right: 20%;
+  width: 100%;
+  height: 30px;
+  display: flex;
+  align-items: center;
+}
+.message-form input {
+  width: 40vw;
+  margin: 0px 10px 10px;
+  padding: 10px;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+}
+.message-form .btn {
+  margin-top: -10px;
+}
+.messages {
+  height: calc(100vh - 200px);
+  overflow-y: auto;
+  border-bottom: 1px solid var(--color-6);
+}
+.message-wrapper {
+  margin-top: 5px;
+  padding: 0px 5px;
+}
+.message-wrapper img {
+  width: 100%;
+  border-radius: 5px;
+}
+.message-wrapper p {
+  padding: 10px;
+  display: inline-block;
+  max-width: 50%;
+  text-align: left;
+  border-radius: 5px;
+}
+.message-wrapper small {
+  display: inline-block;
+  margin-top: 15px;
+  opacity: 0.8;
+}
+.message-wrapper.own {
   text-align: right;
+}
+.me {
+  background: var(--color-3);
+  color: white;
+}
+.friend {
+  background: var(--color-6);
+}
+.selected-user {
+  background: var(--color-6);
+}
+.truncate {
+  font-size: 14px;
+  white-space: nowrap;
+  width: 90%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.truncate strong {
+  margin-right: 10px;
+}
+.unread {
+  margin-left: 10px;
+  background: var(--color-3);
+  color: white;
+  padding: 2px 4px;
+  border-radius: 10px;
+}
+.sm-screen {
+  display: none;
+}
+@media screen and (max-width: 767px) {
+  .home-container {
+    grid-template-columns: 2fr 3fr;
+  }
+  .message-form {
+    left: 3%;
+    right: 0;
+    bottom: 5px;
+  }
+  .message-wrapper p {
+    max-width: 75%;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .home-container {
+    grid-template-columns: 1fr 5fr;
+  }
+  .user-wrapper {
+    display: none;
+  }
+  .sm-container {
+    padding: 10px 0px;
+    text-align: center;
+    cursor: pointer;
+  }
+  .sm-screen {
+    display: inline-block;
+  }
+  .message-form input {
+    width: 50vw;
+    margin: 0px 10px;
+  }
+  .message-form .btn {
+    margin: 0px;
+  }
+
+  .message-wrapper p {
+    max-width: 100%;
+  }
 }
