--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,20 @@
     src: url('./utilities/fonts/vazir-font-v16.1.0/Vazir-Medium.woff2') format('woff2');
 }
 
-*{
-    font-family: 'vazir';
-    box-sizing: border-box;
+
+
+body {
     margin: 0;
-    padding: 0;
-}
+    font-family: 'vazir', "Segoe UI", "Roboto", "Oxygen",
+      "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background: #242526;
+    color: white;
+  }
+  
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+      monospace;
+  }
